--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,17 @@ charset-normalizer==2.0.6
 Django==3.2.7
 gunicorn==20.1.0
 idna==3.2
+joblib==1.0.1
+numpy==1.21.2
+pandas==1.3.3
 psycopg2-binary==2.9.1
+python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
+scikit-learn==1.0
+scipy==1.7.1
+six==1.16.0
+sklearn==0.0
 sqlparse==0.4.2
+threadpoolctl==2.2.0
 urllib3==1.26.7
